fixed small visibility and spacing issues

--- a/src/Components/AboutMe/aboutMe.css
+++ b/src/Components/AboutMe/aboutMe.css
@@ -1,106 +1,107 @@
 .about-me-page {
-	animation: FADE-IN 1s;
-	margin: 5em 0;
+  animation: FADE-IN 1s;
+  margin: 5em 0;
+  flex: 1;
 }
 
 .about-me-header {
-	width: 95%;
-	text-align: center;
-	margin: 0 auto 1.5em;
+  width: 95%;
+  text-align: center;
+  margin: 0 auto 1.5em;
 }
 
 .about-me-container {
-	width: 95%;
-	margin: 0 auto;
+  width: 95%;
+  margin: 0 auto;
 }
 
 .about-me-section {
-	background-color: rgba(250, 250, 250, 0.6);
-	margin-bottom: 20px;
-	padding: 15px;
-	border-radius: 5px;
+  background-color: rgba(250, 250, 250, 0.6);
+  margin-bottom: 20px;
+  padding: 15px;
+  border-radius: 5px;
 }
 
 .skills ul {
-	display: flex;
-	justify-content: space-between;
-	flex-wrap: wrap;
-	font-size: 3em;
-	padding: 0;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  font-size: 3em;
+  padding: 0;
 }
 
 .skills li {
-	list-style: none;
-	flex-basis: 30%;
-	text-align: center;
+  list-style: none;
+  flex-basis: 30%;
+  text-align: center;
 }
 
 .info {
-	background-color: rgba(250, 250, 250, 0.6);
-	border-radius: 3px;
-	display: flex;
-	margin-bottom: 1em;
+  background-color: rgba(250, 250, 250, 0.6);
+  border-radius: 3px;
+  display: flex;
+  margin-bottom: 1em;
 }
 
 .info img {
-	height: 6em;
-	width: 6em;
+  height: 6em;
+  width: 6em;
 }
 
 .info-caption {
-	flex: 1;
-	padding: 1em;
+  flex: 1;
+  padding: 1em;
 }
 
 .about-me-page h1 {
-	color: white;
+  color: white;
 }
 
 h3 {
-	text-align: center;
-	margin-bottom: 0.5em;
+  text-align: center;
+  margin-bottom: 0.5em;
 }
 
 h4 {
-	color: rgb(63, 63, 243);
+  color: rgb(63, 63, 243);
 }
 
 p {
-	display: block;
+  display: block;
 }
 
 @media (min-width: 750px) {
-	.about-me-container {
-		max-width: 600px;
-	}
-	.about-me-section h3 {
-		font-size: 1.5em;
-	}
+  .about-me-container {
+    max-width: 600px;
+  }
+  .about-me-section h3 {
+    font-size: 1.5em;
+  }
 
-	.about-me-section h4 {
-		font-size: 1.5em;
-	}
-	.about-me-section p {
-		font-size: 1.5em;
-	}
+  .about-me-section h4 {
+    font-size: 1.5em;
+  }
+  .about-me-section p {
+    font-size: 1.5em;
+  }
 }
 
 @media (min-width: 1024px) {
-	.about-me-header h1 {
-		font-size: 3em;
-		padding-bottom: 1em;
-	}
-	.about-me-container {
-		max-width: 1200px;
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: space-around;
-	}
-	.about-me-section {
-		flex-basis: 48%;
-	}
+  .about-me-header h1 {
+    font-size: 3em;
+    padding-bottom: 1em;
+  }
+  .about-me-container {
+    max-width: 1200px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  .about-me-section {
+    flex-basis: 48%;
+  }
 
-	.skills li {
-		font-size: 1.5em;
-	}
+  .skills li {
+    font-size: 1.5em;
+  }
 }
