--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -1,63 +1,64 @@
-.home-screen {
+.hero {
   background-size: cover;
   animation: FADE-IN 1s;
   flex: 1;
-}
 
-.hero {
   text-align: center;
   color: white;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
 }
 
 .hero img {
   width: 100%;
+  margin: auto;
 }
 
 .hero section {
-  max-width: 600px;
+  padding: 10px;
+  max-width: 660px;
   margin: auto;
 }
 
-.hero h1 {
-  margin: 30px;
+.hero section h1 {
+  padding: 20px;
 }
 
-.hero p {
-  text-align: center;
-  width: 90%;
-  margin: auto;
-}
 @media (min-width: 750px) {
   .hero img {
-    width: 500px;
-    margin: auto;
-    margin-top: 35px;
+    margin-top: 30px;
+    width: 80%;
+    border-radius: 50%;
+  }
+
+  .hero .section {
+    padding-right: 40px;
   }
 }
 
 @media (min-width: 1024px) {
-  .home-screen {
-    display: flex;
-    justify-content: space-around;
-  }
   .hero {
-    flex: 1;
-    display: flex;
-    max-width: 80%;
+    flex-direction: row;
+
+    margin: auto;
   }
 
-  .hero h1 {
-    font-size: 50px;
+  .hero .row {
+    margin: auto;
+    flex: 1;
+  }
+
+  .hero img {
+    width: 70%;
   }
 
   .hero section {
     text-align: left;
+    padding: 0 40px 0 0;
   }
-  .hero p {
-    text-align: left;
-  }
-
-  .hero img {
-    margin: auto;
+  .hero section h1,
+  .hero section p {
+    padding-left: 0;
   }
 }
