--- a/src/Components/Projects/Project/project.css
+++ b/src/Components/Projects/Project/project.css
@@ -1,61 +1,63 @@
 .project {
-	background-color: rgba(169, 169, 169, 0.8);
-	width: 90%;
-	max-width: 400px;
-	margin-left: auto;
-	margin-right: auto;
-	margin-bottom: 3em;
-	position: relative;
-	border-radius: 5px;
-	box-shadow: -7px 9px 20px 0px rgba(0, 0, 0, 0.3);
-	align-self: flex-start;
+  background-color: rgba(169, 169, 169, 0.8);
+  width: 90%;
+  max-width: 400px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 3em;
+  position: relative;
+  border-radius: 5px;
+  box-shadow: -7px 9px 20px 0px rgba(0, 0, 0, 0.3);
+  align-self: flex-start;
 }
 
 h2 {
-	margin-left: 0.1em;
-	padding: 0.5em;
+  margin-left: 0.1em;
+  padding: 0.5em;
 }
 
 .project img {
-	width: 100%;
-	height: 200px;
-	box-shadow: inset -17px 20px 20px 0px rgba(5, 227, 235, 0.644);
+  width: 100%;
+  height: 200px;
+  box-shadow: inset -17px 20px 20px 0px rgba(5, 227, 235, 0.644);
 }
 
 span {
-	display: inline-block;
-	padding: 10px;
+  display: inline-block;
+  padding: 10px;
 }
 
 .links {
-	display: flex;
-	font-size: 3em;
-	justify-content: space-around;
-	width: 60%;
-	position: absolute;
-	left: 20%;
-	top: 40%;
-	text-shadow: 5px 5px 5px yellow;
+  display: flex;
+  font-size: 4em;
+  justify-content: space-around;
+  width: 60%;
+  position: absolute;
+  left: 20%;
+  top: 40%;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+  margin: auto;
 }
 
 .links a:hover {
-	transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 @media (min-width: 1024px) {
-	.links {
-		display: none;
-	}
+  .links {
+    display: none;
+  }
 
-	.project:hover {
-		transition: all 0.5s;
-		transform: scale(1.05);
-		filter: brightness(50%);
-	}
+  .project:hover {
+    transition: all 0.5s;
+    transform: scale(1.05);
+    filter: brightness(50%);
+  }
 
-	.project:hover .links {
-		display: flex;
-		font-size: 5em;
-		filter: brightness(150%);
-	}
+  .project:hover .links {
+    display: flex;
+    font-size: 5em;
+    filter: brightness(150%);
+  }
 }
